--- a/test_system/templates/basic.html
+++ b/test_system/templates/basic.html
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'index' %}">Система Тестирования Знаний ИУ5</a>
+          <a class="navbar-brand" href="{% url 'index' %}">Система Тестирования Знаний</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
